--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Kkart  in every bite!</h1>
-<p> cookie made at the Kevin Cookie  is  with only the 1414414144141
+<p> cookie made at the Kevin Cookie  is  with karthik
      finest ingredients. Butter from grass fed cows. Unbleached flour with the best flavor and textures. Organic sugar only from India. Eggs from chickens that listen to classical music. Even our water is special. It comes from the Cascade Mountain springs that we hike up to retrieve. Baking is our passion and we take it very seriously.</p>
 
 </body>
