--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Kkart  in every bite!</h1>
+<h1>Kkart  Leave one wolf alive and the sheep are never safe!</h1>
 <p> cookie made at the Kevin Cookie  is  with karthik
      finest ingredients. Butter from grass fed cows. Unbleached flour with the best flavor and textures. Organic sugar only from India and the philippines. Eggs from chickens that listen to classical music. Even our water is special. It comes from the Cascade Mountain springs that we hike up to retrieve. Baking is our passion and we take it very seriously.</p>
 
